# simpl

./: README.md
pay-later-go/: .gitignore  go.mod  go.sum  main.go
pay-later-go/cmd/: discount.go  dues.go  main.go  merchant.go  new.go  payback.go  report.go  totalDues.go  txn.go  update.go  user.go  usersAtCreditLimit.go
pay-later-go/db/: db.go  merchant.go  report.go  transaction.go  transaction_test.go  user.go
pay-later-go/utils/: main.go  main_test.go
pay-later-rs/: .gitignore  Cargo.toml  history.txt
pay-later-rs/migrations/: 20210921191950_create_users.sql  20210921192003_create_merchants.sql  20210921192009_create_transactions.sql
pay-later-rs/src/: main.rs
pay-later-rs/src/db/: db.rs  merchant.rs  mod.rs  report.rs  transaction.rs  user.rs
