[package]
name = "pay-later"
version = "0.1.0"
authors = ["Dhruva Sagar <dhruva.sagar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
rustyline = "9.0.0"
sqlx = { version = "0.5.7", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
structopt = "0.3.23"
tokio = { version = "1.12.0", features = ["full"] }
